--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 #Blocks {
   display: flex;
   justify-content: center;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
 
@@ -25,8 +25,53 @@
   border: 3px solid black;
   text-align: center; 
   padding: 10px;
-  min-width: 1500px;
-  max-width: 1500px;
+  min-width: 1000px;
+  max-width: 1000px;
+  min-height: 300px;
+  font-size: 20px;
+  border-radius: 20px;
+  color: whitesmoke;
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#Education {
+  border: 3px solid black;
+  text-align: center; 
+  padding: 10px;
+  min-width: 1000px;
+  max-width: 1000px;
+  min-height: 300px;
+  font-size: 20px;
+  border-radius: 20px;
+  color: whitesmoke;
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#Jobs {
+  border: 3px solid black;
+  text-align: center; 
+  padding: 10px;
+  min-width: 1000px;
+  max-width: 1000px;
+  min-height: 300px;
+  font-size: 20px;
+  border-radius: 20px;
+  color: whitesmoke;
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#Products {
+  border: 3px solid black;
+  text-align: center; 
+  padding: 10px;
+  min-width: 1000px;
+  max-width: 1000px;
   min-height: 300px;
   font-size: 20px;
   border-radius: 20px;
@@ -40,8 +85,8 @@
   border: 3px solid black;
   text-align: center; 
   padding: 10px;
-  min-width: 1500px;
-  max-width: 1500px;
+  min-width: 1000px;
+  max-width: 1000px;
   min-height: 300px;
   font-size: 20px;
   border-radius: 20px;
@@ -56,7 +101,8 @@ img {
   height: 33%;
   margin: 30px;
   box-shadow: 4px 4px 5px black;
-  transition: all 2s
+  transition: all 2s;
+  justify-content: center;
 }
 
 img:hover {
